--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pytest = "7.3.1"
 pytest-sugar = "0.9.7"
 pytest-cov = "4.1.0"
 pytest-html = "3.2.0"
+black = "^23.11.0"
 
 [build-system]
 requires = [ "poetry-core==1.1.0" ]
