--- a/apps/legacy-api/pyproject.toml
+++ b/apps/legacy-api/pyproject.toml
@@ -22,7 +22,12 @@ group = { }
   include = "legacy_api"
 
   [tool.poetry.dependencies]
-  python = ">=3.9,<3.11"
+  python = ">=3.9,<3.12"
+  fastapi = "^0.104.1"
+  uvicorn = "^0.24.0"
+
+[tool.poetry.scripts]
+main = "legacy_api.main:main"
 
 [build-system]
 requires = [ "poetry-core" ]
