--- a/apps/mobile-api/deploy/values.yaml
+++ b/apps/mobile-api/deploy/values.yaml
@@ -1,11 +1,11 @@
-# Default values for bff.
+# Default values for mobile-api.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: bff
+  repository: bff-mobile-api
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ''
@@ -43,7 +43,7 @@ securityContext:
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8002
 
 ingress:
   enabled: false
