--- a/apps/mobile-api/project.json
+++ b/apps/mobile-api/project.json
@@ -27,7 +27,7 @@
       "executor": "@nxlv/python:build",
       "outputs": ["{projectRoot}/dist"],
       "options": {
-        "outputPath": "apps/mobile-api/dist",
+        "outputPath": "dist/apps/mobile-api",
         "publish": false,
         "lockedVersions": true,
         "bundleLocalDependencies": true
