--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@nx/angular": "17.1.1",
+    "@swc/helpers": "^0.5.3",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webpack": "^5.89.0",
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
@@ -49,7 +51,7 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
-    "@types/node": "16.11.7",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "cypress": "^13.0.0",
