--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "serve:bff": "npx nx serve bff --host 0.0.0.0 --disable-host-check"
+    "serve:bff": "npx nx serve bff --host 0.0.0.0 --disable-host-check --watch",
+    "ssr-serve:bff": "npx nx serve-ssr bff --host 0.0.0.0 --watch"
   },
   "private": true,
   "dependencies": {
@@ -14,7 +15,9 @@
     "@angular/forms": "~17.0.0",
     "@angular/platform-browser": "~17.0.0",
     "@angular/platform-browser-dynamic": "~17.0.0",
+    "@angular/platform-server": "~17.0.0",
     "@angular/router": "~17.0.0",
+    "@angular/ssr": "~17.0.0",
     "@fontsource-variable/saira": "^5.0.18",
     "@fortawesome/angular-fontawesome": "^0.14.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
@@ -23,6 +26,7 @@
     "@nx/angular": "17.1.1",
     "@swc/helpers": "^0.5.3",
     "bootstrap": "^5.3.2",
+    "express": "~4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "webpack": "^5.89.0",
@@ -50,6 +54,7 @@
     "@schematics/angular": "~17.0.0",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@types/express": "4.17.14",
     "@types/jest": "^29.4.0",
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
