feat: working sample app

--- a/apps/bff/Dockerfile
+++ b/apps/bff/Dockerfile
@@ -6,7 +6,7 @@ RUN npm install
 COPY ./nx.json .
 COPY ./tsconfig.base.json .
 COPY ./apps/bff ./apps/bff
-CMD ["npm", "run", "ssr-serve:bff"]
+CMD ["npm", "run", "serve:bff"]
 
 FROM nginx:alpine as prod
 EXPOSE 80
