--- a/apps/bff/deploy/templates/deployment.yaml
+++ b/apps/bff/deploy/templates/deployment.yaml
@@ -44,10 +44,16 @@ spec:
             httpGet:
               path: /
               port: http
+              periodSeconds: 60
+              initialDelaySeconds: 120
+              timeoutSeconds: 10
           readinessProbe:
             httpGet:
               path: /
               port: http
+              periodSeconds: 60
+              initialDelaySeconds: 120
+              timeoutSeconds: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
