--- a/apps/mobile-api/pyproject.toml
+++ b/apps/mobile-api/pyproject.toml
@@ -25,6 +25,7 @@ group = { }
   python = ">=3.9,<3.12"
   fastapi = "^0.104.1"
   uvicorn = "^0.24.0"
+  requests = "^2.31.0"
 
 [tool.poetry.scripts]
 main = "mobile_api.main:main"
