--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pytest-sugar = "0.9.7"
 pytest-cov = "4.1.0"
 pytest-html = "3.2.0"
 black = "^23.11.0"
+types-requests = "^2.31.0.10"
 
 [build-system]
 requires = [ "poetry-core==1.1.0" ]
